# rust-dhcp

./: .gitignore  Cargo.toml  INSTALL  README.md
arp/: Cargo.toml
arp/examples/: test.rs
arp/src/: freebsd.rs  lib.rs  linux.rs  windows.rs
bpf/: Cargo.toml
bpf/examples/: test.rs
bpf/src/: lib.rs
client/: Cargo.toml
client/examples/: client.rs  linux_client.rs  test.rs
client/src/: backoff.rs  builder.rs  client.rs  forthon.rs  lib.rs  macros.rs  message.rs  message_builder.rs  state.rs
client/src/message/: mod.rs
framed/: Cargo.toml
framed/src/: lib.rs  socket.rs
protocol/: Cargo.toml
protocol/src/: codec.rs  error.rs  hardware_type.rs  lib.rs  message.rs  operation_code.rs  parser.rs
protocol/src/message/: constants.rs  deserializer.rs  hardware_type.rs  mod.rs  operation_code.rs  parser.rs  serializer.rs  validator.rs
protocol/src/message/options/: dhcp_message_type.rs  message_type.rs  mod.rs  option_tag.rs
protocol/src/options/: message_type.rs  mod.rs  option_tag.rs
protocol/src/v4/: constants.rs  deserializer.rs  hardware_type.rs  mod.rs  operation_code.rs  serializer.rs  validator.rs
protocol/src/v4/options/: message_type.rs  mod.rs  option_tag.rs  overload.rs
server/: Cargo.toml
server/examples/: server.rs
server/src/: bpf.rs  builder.rs  database.rs  error.rs  lease.rs  lib.rs  macros.rs  message.rs  message_builder.rs  offer.rs  server.rs  storage.rs  storage_ram.rs
server/src/message/: ack.rs  error.rs  mod.rs  offer.rs
