[package]
name = "dhcp-client"
version = "0.1.0"
authors = ["hedgar <hedgar2017@gmail.com>"]

[dependencies]
log = "0.4.3"
tokio = "0.1.7"
futures = "0.1.21"
bytes = "0.4.8"
eui48 = "0.3.2"
chrono = "0.4.4"
hostname = "0.1.5"
rand = "0.6.1"
dhcp-protocol = { path = "../protocol" }
dhcp-framed = { path = "../framed" }
net2 = "0.2.33"

[dev-dependencies]
env_logger = "0.5.10"
ifcontrol = { git = "https://github.com/glebpom/rust-netif", rev="master" }
