[package]
name = "dhcp-client"
version = "0.1.1"
authors = ["hedgar <hedgar2017@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.3"
tokio = "0.2"
futures = "0.3.1"
bytes = "0.5"
eui48 = "0.4.1"
chrono = "0.4.4"
hostname = "0.3"
rand = "0.7"
dhcp-protocol = { path = "../protocol" }
dhcp-framed = { path = "../framed" }
net2 = "0.2.33"

[dev-dependencies]
env_logger = "0.6.0"
ifcontrol = { git = "https://github.com/glebpom/rust-netif", rev="master" }
